--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <textarea class="form-control" id="pesan" rows="3"></textarea>
               </div>
 
-              <button type="submit" class="btn btn-primary bg-warning">Kirim</button>
+              <button type="submit" class="btn btn-warning">Kirim</button>
             </form>
           </div>
         </div>
