--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
     <!-- Bootstrap ICON -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
+
+    <!-- AOS CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
     <title>My Portfolio | Dadan Supiana</title>
@@ -66,10 +70,10 @@
           </div>
         </div>
         <div class="row justify-content-center fs-6 text-center">
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-right">
             <p>Saya seorang FreshGraduate dari sekolah SMKN 1 KARAWANG yang memiliki kemampuan untuk mengatur jaringan internet.</p>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-left" data-aos-delay="50">
             <p>Saya juga seorang Web Developer. Saya memahami beberapa bahasa pemrograman seperti HTML, CSS, JavaScript dan PHP. Serta saya juga menguasai Linux terutama pada bidang Server.</p>
           </div>
         </div>
@@ -89,11 +93,11 @@
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
-            <h2>Project</h2>
+            <h2>My Project</h2>
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3" data-aos="flip-left">
             <div class="card">
               <img src="img/project/crop11.png" class="card-img-top" alt="Project 1 " />
               <div class="card-body">
@@ -101,7 +105,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3" data-aos="flip-left" data-aos-delay="100">
             <div class="card">
               <img src="img/project/littleina.jpg" class="card-img-top" alt="Project 2 " />
               <div class="card-body">
@@ -109,7 +113,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3" data-aos="flip-left" data-aos-delay="200">
             <div class="card">
               <img src="img/project/subaru_crop.png" class="card-img-top" alt="Project 3 " />
               <div class="card-body">
@@ -147,7 +151,7 @@
               <strong>Warning!</strong> Your message cannot be submited!
               <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
-            <form name="wpu-contact-form">
+            <form name="wpu-contact-form" data-aos="zoom-in" data-aos="zoom-out-down">
               <div class="mb-3">
                 <label for="name" class="form-label">Nama Lengkap</label>
                 <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" />
@@ -188,6 +192,14 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <!-- Script AOS -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        duration: 1000,
+      });
+    </script>
 
     <!-- Script Form -->
     <script>
